# trajectory_transformations

./: .gitignore  LICENSE  MANIFEST.in  README.md  changelog.txt  pyproject.toml  setup.cfg  setup.py  transformations.py
lib/: _ctransformations.pyx
rsc/: struct.gro  struct.tpr
src/: __init__.py  transformations.py
tests/: numba_transform.py  test.py
transformations/: _ctransformations.pyx  transformations.py
