
[metadata]
name         = transformations
version      = 0.0.1
author       = Santeri Paajanen
author_email = santeri.e.paajanen@helsinki.fi
description  = Trajectory transformations for MDAnalysis
long_description = file: README.md
classifiers  = 
    Programming Language :: Python :: 3
    Programming Language :: Cython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
dependencies = 
    numpy
    MDAnalysis
