
[metadata]
name         = trajectory_transformations
version      = attr: trajectory_transformations.__version__
author       = Santeri Paajanen
author_email = santeri.e.paajanen@helsinki.fi
description  = Trajectory transformations for MDAnalysis
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers  = 
    Programming Language :: Python :: 3
    Programming Language :: Cython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
dependencies = 
    numpy
    MDAnalysis
